[package]
name = "pallet-rrsc-vrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "6.0.0", default-features = false, path = "../../primitives/application-crypto" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, path = "../authorship" }
cessp-consensus-rrsc = { version = "0.10.0-dev", default-features = false, path = "../../primitives/consensus/rrsc" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
merlin = { version = "2.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }
sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
sp-staking = { version = "4.0.0-dev", default-features = false, path = "../../primitives/staking" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
pallet-session = { version = "4.0.0-dev", path = "../session" }


[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"pallet-authorship/std",
	"codec/std",
	"merlin/std",
	"scale-info/std",
	"schnorrkel/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
]