[package]
name = "cessc-consensus-rrsc-rpc"
version = "0.10.0-dev"
authors = ["CESS"]
description = "RPC extensions for the RRSC consensus algorithm"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://cess.one"
repository = "https://github.com/CESSProject/substrate"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cessc-consensus-rrsc = { version = "0.10.0-dev", path = "../" }
sc-rpc-api = { version = "0.10.0-dev", path = "../../../rpc-api" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
cessp-consensus-rrsc = { version = "0.10.0-dev", path = "../../../../primitives/consensus/rrsc" }
serde = { version = "1.0.126", features=["derive"] }
sp-blockchain = { version = "4.0.0-dev", path = "../../../../primitives/blockchain" }
sp-runtime = { version = "4.0.0-dev", path = "../../../../primitives/runtime" }
sc-consensus-epochs = { version = "0.10.0-dev", path = "../../epochs" }
futures = "0.3.16"
derive_more = "0.99.2"
sp-api = { version = "4.0.0-dev", path = "../../../../primitives/api" }
sp-consensus = { version = "0.10.0-dev", path = "../../../../primitives/consensus/common" }
sp-core = { version = "6.0.0", path = "../../../../primitives/core" }
sp-application-crypto = { version = "6.0.0", path = "../../../../primitives/application-crypto" }
sp-keystore = { version = "0.12.0", path = "../../../../primitives/keystore" }

[dev-dependencies]
sc-consensus = { version = "0.10.0-dev", path = "../../../consensus/common" }
serde_json = "1.0.68"
sp-keyring = { version = "4.0.0-dev", path = "../../../../primitives/keyring" }
sc-keystore = { version = "4.0.0-dev", path = "../../../keystore" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../../test-utils/runtime/client" }
tempfile = "3.1.0"
